# sso

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FIXES_APPLIED.md  FIX_REPORT.md  LICENSE  Makefile  PRE_RELEASE_CHECKLIST.md  README.md  SECURITY_FIXES_SUMMARY.md  TESTING.md  cache_coverage.out  code-quality-report.md  code-review-fixes-summary.md  coverage_check.out  coverage_full.out  coverage_handler.out  coverage_new.out  coverage_task5.1.out  coverage_task5.2.out  coverage_task5.3.out  coverage_task5.4.out  go.mod  go.sum  handler_coverage.out  postgres_coverage.out
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
analysis-report/: 01-执行摘要.md  02-代码质量分析.md  03-安全审计报告.md  04-架构评审报告.md  05-测试质量报告.md  06-性能分析报告.md  07-改进建议清单.md  08-改进路线图.md  09-改进实施报告.md  README.md  sso-analysis-report.md
code-analysis-report/: 01-执行摘要.md  02-代码质量分析.md  05-测试质量报告.md  06-性能分析报告.md  07-改进建议清单.md  08-改进路线图.md
docker/: .env.truenas.example  Dockerfile  Dockerfile.dev  docker-compose.test.yml  docker-compose.truenas.yml  docker-compose.yml  entrypoint.sh
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODE_ISSUES_REPORT.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  CONFIGURATION.md  COVERAGE_ENFORCEMENT.md  CSP_FIX_REPORT.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  E2E_TESTING.md  EMAIL_SERVICE.md  EMAIL_TEMPLATE_EMBED_MIGRATION.md  PRESSURE_TESTING_CHECKLIST.md  PROJECT_ORGANIZATION.md  (+18 more)
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  errors.rs  lib.rs  models.rs
sdks/rust/tests/: client_test.rs
(+540 files in other folders)
