[package]
name = "sso-sdk"
version = "1.0.0"
edition = "2021"
description = "SSO Service Rust Client SDK"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mockito = "1"
